@startuml

title __CONTROLLER's Class Diagram__\n

  namespace  {
    namespace k.posam.blog {
      namespace controller {
        class sk.posam.blog.controller.AuthController {
            + login()
            + signup()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace controller {
        class sk.posam.blog.controller.ImageController {
            + uploadImage()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace controller {
        class sk.posam.blog.controller.PostController {
            + addComment()
            + createPost()
            + deleteComment()
            + deletePost()
            + editPost()
            + getPost()
            + getPostComments()
            + showAllPosts()
            + showUserPosts()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace controller {
        class sk.posam.blog.controller.UserController {
            + editUser()
            + getAllUsers()
            + getUser()
        }
      }
    }
  }
  

  sk.posam.blog.controller.AuthController o-- sk.posam.blog.service.AuthService : authService
  sk.posam.blog.controller.ImageController o-- sk.posam.blog.service.FileUploadService : fileUploadService
  sk.posam.blog.controller.PostController o-- sk.posam.blog.service.CommentService : commentService
  sk.posam.blog.controller.PostController o-- sk.posam.blog.service.PostService : postService
  sk.posam.blog.controller.UserController o-- sk.posam.blog.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
